--- a/.env
+++ b/.env
@@ -2,5 +2,8 @@ NODE_ENV=development
 
 PROTOCOL="http"
 DOMAIN="167.172.96.11"
+
+CLIENT_URL="${PROTOCOL}://localhost:3000"
 SERVER_URL="${PROTOCOL}://${DOMAIN}/api/v1"
+
 NODE_ENV="production"
