--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-dom": "^18",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.53.0",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@tanstack/react-query-devtools": "^5.59.0",
