--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.59.0",
+    "app-root-path": "^3.1.0",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
