--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,24 +1,25 @@
 {
-  "extends": [
-    "next/core-web-vitals",
-    "next/typescript",
-    "plugin:prettier/recommended"
-  ],
-  "ignorePatterns": [
-    "src/api/*",
-    // "src/components/ui/Tab/Tabs.tsx",
-    "src/app/store.ts",
-    "node_modules/*"
-  ],
-  "rules": {
-    "no-var": "error",
-    "prefer-const": "warn",
-    "no-unused-vars": "error",
-    "prettier/prettier": [
-      "warn",
-      {
-        "endOfLine": "auto"
-      }
-    ]
-  }
+	"extends": [
+		"next/core-web-vitals",
+		"next/typescript",
+		"plugin:prettier/recommended"
+	],
+	"ignorePatterns": [
+		"src/api/*",
+		// "src/components/ui/Tab/Tabs.tsx",
+		"src/app/store.ts",
+		"node_modules/*"
+	],
+	"rules": {
+		"no-var": "warn",
+		"prefer-const": "warn",
+		"no-unused-vars": "warn",
+		"prettier/prettier": [
+			"warn",
+			{
+				"endOfLine": "auto"
+			},
+			{ "printWidth": 80 }
+		]
+	}
 }
