--- a/package.json
+++ b/package.json
@@ -22,13 +22,16 @@
     "app-root-path": "^3.1.0",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
+    "i18next": "^23.16.0",
     "js-cookie": "^3.0.5",
     "next": "14.2.14",
+    "next-i18next": "^15.3.1",
     "react": "^18",
     "react-dom": "^18",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
+    "react-i18next": "^15.0.3",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
