--- a/.prettierrc
+++ b/.prettierrc
@@ -1,12 +1,12 @@
 {
-	"semi": false,
-	"singleQuote": true,
-	"jsxSingleQuote": true,
-	"bracketSpacing": true,
-	"trailingComma": "all",
+  "semi": false,
+  "singleQuote": true,
+  "jsxSingleQuote": true,
+  "bracketSpacing": true,
+  "trailingComma": "all",
 
-	"printWidth": 80,
-	"tabWidth": 2,
-	"arrowParents": "avoid",
-	"endOfLine": "lf"
+  "printWidth": 80,
+  "tabWidth": 2,
+  "arrowParents": "awoid",
+  "endOfLine": "lf"
 }
