Connect with API

--- a/.env
+++ b/.env
@@ -5,5 +5,6 @@ DOMAIN="167.172.96.11"
 
 CLIENT_URL="${PROTOCOL}://localhost:3000"
 SERVER_URL="${PROTOCOL}://${DOMAIN}/api/v1"
+MEDIA_URL="${PROTOCOL}://${DOMAIN}"
 
 NODE_ENV="production"
