--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "app-root-path": "^3.1.0",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "i18next": "^23.16.0",
     "js-cookie": "^3.0.5",
     "next": "14.2.14",
     "next-i18next": "^15.3.1",
+    "num2words": "^1.0.2",
     "react": "^18",
     "react-dom": "^18",
     "react-google-recaptcha": "^3.1.0",
@@ -36,6 +38,7 @@
   },
   "devDependencies": {
     "@tanstack/react-query-devtools": "^5.59.0",
+    "@types/date-fns": "^2.6.0",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
