--- a/package.json
+++ b/package.json
@@ -23,10 +23,9 @@
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "i18next": "^23.16.0",
     "js-cookie": "^3.0.5",
     "next": "14.2.14",
-    "next-i18next": "^15.3.1",
+    "next-intl": "^3.23.5",
     "num2words": "^1.0.2",
     "react": "^18",
     "react-dom": "^18",
