--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,8 @@
     "prefer-const": "warn",
     "no-unused-vars": "warn",
     "no-use-before-define": "off",
+
+    "@typescript-eslint/no-empty-interface": "off",
     "prettier/prettier": [
       "warn",
       {
