Many small fixes

--- a/.env
+++ b/.env
@@ -1,10 +1,8 @@
 NODE_ENV=development
 
-PROTOCOL="http"
-DOMAIN="167.172.96.11"
+NEXT_PUBLIC_PROTOCOL="http"
+NEXT_PUBLIC_DOMAIN="167.172.96.11"
 
-CLIENT_URL="${PROTOCOL}://localhost:3000"
-SERVER_URL="${PROTOCOL}://${DOMAIN}/api/v1"
-MEDIA_URL="${PROTOCOL}://${DOMAIN}"
-
-NODE_ENV="production"
+NEXT_PUBLIC_CLIENT_URL="${NEXT_PUBLIC_PROTOCOL}://localhost:3000"
+NEXT_PUBLIC_SERVER_URL="${NEXT_PUBLIC_PROTOCOL}://${NEXT_PUBLIC_DOMAIN}/api/v1"
+MEDIA_URL="${NEXT_PUBLIC_PROTOCOL}://${NEXT_PUBLIC_DOMAIN}"
