--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier"
+    "format": "prettier",
+    "knip": "knip"
   },
   "engines": {
     "node": ">=22.7.0",
@@ -24,6 +25,7 @@
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^11.11.11",
     "js-cookie": "^3.0.5",
     "next": "14.2.14",
     "next-intl": "^3.23.5",
@@ -40,7 +42,7 @@
     "@tanstack/react-query-devtools": "^5.59.0",
     "@types/date-fns": "^2.6.0",
     "@types/js-cookie": "^3.0.6",
-    "@types/node": "^20",
+    "@types/node": "^22.8.7",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-google-recaptcha": "^2.1.9",
@@ -49,8 +51,9 @@
     "eslint-config-next": "14.2.14",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "knip": "^5.36.2",
     "prettier": "^3.3.3",
     "sass": "^1.79.4",
-    "typescript": "^5"
+    "typescript": "^5.6.3"
   }
 }
