--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ NEXT_PUBLIC_DOMAIN="167.172.96.11"
 NEXT_PUBLIC_CLIENT_URL="${NEXT_PUBLIC_PROTOCOL}://localhost:3000"
 NEXT_PUBLIC_SERVER_URL="${NEXT_PUBLIC_PROTOCOL}://${NEXT_PUBLIC_DOMAIN}/api/v1"
 MEDIA_URL="${NEXT_PUBLIC_PROTOCOL}://${NEXT_PUBLIC_DOMAIN}"
+
+JWT_SECRET="jflasjf94-3bjn346kj6k765lk-75l7l65k-k36k6534-k7lk954854k7m6kmyk6njyb6"
