--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,8 @@
     "prefer-const": "warn",
     "no-unused-vars": "warn",
     "no-use-before-define": "off",
-
+    "@typescript-eslint/ban-ts-comment": "off",
+    "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-empty-interface": "off",
     "prettier/prettier": [
       "warn",
