Add Subscribes page & small optimization

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["VIFYX", "ПОДКАСТЫ", "САЙДБАРЫ", "ЭКШЕНЫ"]
+  "cSpell.words": ["VIFYX", "Автопродление", "ПОДКАСТЫ", "САЙДБАРЫ", "ЭКШЕНЫ"]
 }
