--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bun": ">=1.1.26"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^15.0.3",
     "@tanstack/react-query": "^5.59.0",
     "app-root-path": "^3.1.0",
     "axios": "^1.7.7",
@@ -27,6 +28,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^11.11.11",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.456.0",
     "next": "14.2.14",
     "next-intl": "^3.23.5",
     "num2words": "^1.0.2",
