--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,17 @@
 version: '3'
 services:
   nextjs:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - '3000:3000'
+
   nginx:
-    image: nginx:latest
+    build:
+      context: ./.nginx
+      dockerfile: Dockerfile
     ports:
       - '80:80'
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
       - nextjs
