--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tanstack/react-query": "^5.59.0",
     "app-root-path": "^3.1.0",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.6",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.11.11",
@@ -33,6 +34,7 @@
     "next-intl": "^3.23.5",
     "num2words": "^1.0.2",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.53.0",
