--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,19 @@
-version: '3'
 services:
   nextjs:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    build: .
     ports:
       - '3000:3000'
+    volumes:
+      - .:/app
+      - /app/node_modules
+      - /app/.next
 
   nginx:
-    build:
-      context: ./.nginx
-      dockerfile: Dockerfile
+    image: nginx:alpine
     ports:
       - '80:80'
+    volumes:
+      - ./.nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./.nginx/rc.conf:/etc/rc
     depends_on:
       - nextjs
