--- a/.nginx/nginx.conf
+++ b/.nginx/nginx.conf
@@ -1,9 +1,11 @@
-events { }
-
+events { 
+    worker_connections 1024;
+}
 http {
     server {
-        listen 80;
-
+        listen [::]:80;
+        listen 80 default_server;
+        server_name _;
         location / {
             proxy_pass http://nextjs:3000;
             proxy_http_version 1.1;
